--- a/public/panel.html
+++ b/public/panel.html
@@ -9,15 +9,15 @@
   <body>
     <div id="app"></div>
     <script type="module" data-vite-ignore>
-      import createModule from '/hello.js?url';
+      import createModule from '/hello.js';
   
       (async () => {
           window.hello = await createModule();
           document.dispatchEvent(new CustomEvent("jsReady", {detail: window.hello}));
           console.debug("module", hello);
-          // window.hello._runMain();
       })();
-  </script>
-    <script type="module" src="/src/main.ts"></script>
+    </script>
+    <script type="module" crossorigin src="/js/index.js"></script>
+    <link rel="stylesheet" href="/assets/index.css">
   </body>
 </html>
